# ivcap-ai-tool-sdk-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
examples/: sidecar.py
examples/is_prime/: Makefile  requirements.txt  tool-service.py
examples/test-batch/: Makefile  batch_service.py  ivcap.py  server.py  testing.py
examples/test-tool/: Dockerfile  Makefile  Makefile.common  mcp-inspector.config.json  pyproject.toml  requirements.txt  service-bad.json  service.json  tool-service.py  wordle.py
examples/test-tool/tests/: call-get.json  call-post.json  call-read-artifact-meta.json  cause_oom_error.json  echo.json  events.json  hugging-face.json  list-services.json  list-tools.json  llm-hello.json  raise_error.json  wordle.json
ivcap_ai_tool/: decorators.py  executor.py  logger.py  service_definition.py
src/ivcap_ai_tool/: builder.py  context.py  executor.py  secret.py  utils.py  version.py
tests/: test_scretmgr.py  test_secret.py
